--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -40,11 +40,14 @@
         </p>
     </div>
     <div class="col-sm-12 col-md-6 col-lg-4">
-        <img src="../../assets/angular.png" alt="Angular" class="language"> <br>
+        <img src="./assets/angular.png" alt="Angular" class="language"> <br>
         
         <h4 style="text-align:center">Angular</h4>
         <p>
-        
+          I learnt angular 6 in order to build single page applications that provdie a user friendly
+          environment. While learning angular i had a chance to tinker with a host of programming languages such 
+          as javascript and typescript. Example of projects i have built in angular were a the Git Search , Ordering 
+          System to even this portfolio.
         </p>
     </div>
 </div>
