--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -5,31 +5,31 @@
 
 <div class="row">
     <div class="col-sm-12 col-md-6 col-lg-4">
-         <img src="../../assets/java.png" alt="java" class="language"> <br>
+         <img src="assets/java.png" alt="java" class="language"> <br>
         
          <h4 style="text-align:center">Java Developer</h4>
          <p>
             I am able to create <b>mobile apps ,desktop apps and Spark enterprise APIs  </b> (application programming interfaces) 
             all using java . My journey in java started in 2017 , at the time java 8 had a big impact on the java
-            world. So all along my code has been centered around java 8 syntax though still interested
+            ecosystem. So all along my code has been centered around java 8 syntax though still interested
             in the evolution of java . I understand OOP programming 
             pradigms such as  <b>SOLID</b> in the context of java. 
          </p>
     </div>
     <div class="col-sm-12 col-md-6 col-lg-4">
-        <img src="../../assets/c.png" alt="c" class="language"> <br>
+        <img src="assets/c.png" alt="c" class="language"> <br>
         
          <h4 style="text-align:center">C programmer</h4>
          <p>
-           As much as i have object oriented skills under my sleeve i like structural 
-           programming methodologies as a result i learned C  and currently using it in 
+           As much as i have object oriented skills under my sleeve I like structural 
+           programming methodologies, as a result i learned C  and currently using it in 
            embedded systems programming. I must admit I feel at home deconstructing the abstraction 
            level created by most high level languages when allocating and deallocating memory blocks to 
            my programs. Still brushing on my c skills as yo can see in my  <a href="https://github.com/Magz8984">github account</a>
          </p>
     </div>
     <div class="col-sm-12 col-md-6 col-lg-4">
-        <img src="../../assets/python.jpg" alt="python" class="language"> <br>
+        <img src="assets/python.jpg" alt="python" class="language"> <br>
         
         <h4 style="text-align:center">Python programmer</h4>
         <p>
@@ -40,14 +40,54 @@
         </p>
     </div>
     <div class="col-sm-12 col-md-6 col-lg-4">
-        <img src="./assets/angular.png" alt="Angular" class="language"> <br>
-        
+        <img src="assets/angular.png" alt="Angular" class="language"> <br>
+      
         <h4 style="text-align:center">Angular</h4>
         <p>
           I learnt angular 6 in order to build single page applications that provdie a user friendly
-          environment. While learning angular i had a chance to tinker with a host of programming languages such 
+          environment. While learning angular, I had a chance to tinker with a host of programming languages such 
           as javascript and typescript. Example of projects i have built in angular were a the Git Search , Ordering 
           System to even this portfolio.
+        </p>
+    </div>
+    <div class="col-sm-12 col-md-6 col-lg-4">
+        <img src="assets/vb.png" alt="VB" class="language"> <br>
+      
+        <h4 style="text-align:center">Visual Basic .NET</h4>
+        <p>
+            I have been able to create managment  systems from point of sales systems,
+             church managment systems to transport management systems using vb.net and 
+            database management systems such as mysql and microsoft sql server
+            not forgetting initial rbms systems such as ms-access. I took a course on this
+            at the Institute Of Advanced Technology .
+        </p>
+    </div>
+    <div class="col-sm-12 col-md-6 col-lg-4">
+        <img src="assets/jquery.gif" alt="Jquery" class="language"> <br>
+      
+        <h4 style="text-align:center">Jquery</h4>
+        <p>
+            I have interected ,built and even created content on jquery on youtube.
+            I use jquery to create dynamic websites providing a way to interact with
+            DOM objects with less code and maximum efficiency that is geared towards 
+            code mobility and reusability. 
+        </p>
+    </div>
+    <div class="col-sm-12 col-md-6 col-lg-4">
+        <img src="assets/android.jpg" alt="Android" class="language"> <br>
+        <h4 style="text-align:center">Android</h4>
+        <p>
+            I am currently taking android as my operating system of choice to create mobile
+            systems both for enterprise and hobby projects. Some of the projects I have done are
+            agriculture, marketing and drone projects and  all  are in my gitub account.
+        </p>
+    </div>
+    <div class="col-sm-12 col-md-6 col-lg-4">
+        <img src="assets/html.jpg" alt="Html" class="language"> <br>
+        <h4 style="text-align:center">HTML</h4>
+        <p>
+            In regards to dynamic websites I can create really amaizing projects
+            in html css and javascript both for enterprise and hobby projects.
         </p>
     </div>
 </div>
