--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,3 +1,6 @@
+.projects{
+    transition: all .3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
 .projects:hover{
     box-shadow: 5px 5px 5px black;
     background-color:#262626;
