--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,7 +7,7 @@
 <div class="row">
  <div class="col-md-4 col-sm-12 projects">
     <div style="width:100%;background-color:#fff">
-        <img src="../../assets/build.png" alt="leaf" width="50px" height="50px"style="margin:20px">
+        <img src="assets/build.png" alt="leaf" width="50px" height="50px"style="margin:20px">
     </div>
     <h1 style="color:skyblue">Build</h1>
     <p>
@@ -25,7 +25,7 @@
  </div>
  <div class="col-md-4 col-sm-12 projects ">
     <div style="width:100%;background-color:#262626">
-        <img src="../../assets/leaf.png" alt="leaf" width="50px" height="50px"style="margin:20px">
+        <img src="assets/leaf.png" alt="leaf" width="50px" height="50px"style="margin:20px">
     </div>
     <h1 style="color:olivedrab">Agrino</h1>
     <p>
@@ -45,7 +45,7 @@
 </div>
 <div class="col-md-4 col-sm-12 projects">
     <div style="width:100%;background-color:#fff">
-        <img src="../../assets/oct.png" alt="leaf" width="50px" height="50px"style="margin:20px">
+        <img src="assets/oct.png" alt="leaf" width="50px" height="50px"style="margin:20px">
     </div>
     <h1 style="color:slategray">Github Search</h1>
     <p>
