--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <h1 style="font-family: 'Teko', sans-serif">Home</h1>
 <div class="row">
    <div class="col-sm-12 col-md-4">
-      <img src="../../assets/myface.jpg" alt="pic" class="image"/>
+      <img src="assets/myface.jpg" alt="pic" class="image"/>
     </div>
    <div class="col-sm-12 col-md-4">
         <p style="text-align:center;font-family: 'Alegreya Sans', sans-serif;font-size:20px">
@@ -21,15 +21,15 @@
    <div class="contacts">
        <div class="row">
             <div class="col-sm-6 col-md-4">
-                    <img src="../../assets/youtube.jpg" width="100px" height="100px" style="border-radius:10px"/>
+                    <img src="assets/youtube.jpg" width="100px" height="100px" style="border-radius:10px"/>
                     <p style="text-align:center"><a href="https://www.youtube.com/channel/UCwdiZiDNen4Y6V9fIQ9Va8Q">Check It Out !!</a></p>
                </div>
                <div class="col-sm-6 col-md-4">
-                       <img src="../../assets/insta.png" width="100px" height="100px" style="border-radius:10px"/>
+                       <img src="assets/insta.png" width="100px" height="100px" style="border-radius:10px"/>
                        <p style="text-align:center;color: blue">@_code_lover</p>
                </div>
                <div class="col-sm-6 col-md-4">
-                       <img src="../../assets/email.png" width="100px" height="100px" style="border-radius:10px"/>
+                       <img src="assets/email.png" width="100px" height="100px" style="border-radius:10px"/>
                        <p style="text-align:center;color: blue">collinsmuthinja@gmail.com</p>
                </div>
        </div>
