--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -25,7 +25,7 @@
            programming methodologies, as a result i learned C  and currently using it in 
            embedded systems programming. I must admit I feel at home deconstructing the abstraction 
            level created by most high level languages when allocating and deallocating memory blocks to 
-           my programs. Still brushing on my c skills as yo can see in my  <a href="https://github.com/Magz8984">github account</a>
+           my programs. Still brushing on my c skills as you can see in my  <a href="https://github.com/Magz8984">github account</a>
          </p>
     </div>
     <div class="col-sm-12 col-md-6 col-lg-4">
