--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -90,4 +90,13 @@
             in html css and javascript both for enterprise and hobby projects.
         </p>
     </div>
+    <div class="col-sm-12 col-md-6 col-lg-4">
+        <img src="assets/bootstrap.png" alt="Bootstrap" class="language">
+        <h4 style="text-align:center">Bootstrap</h4>
+        <p>
+            Making websites responsive and have a consistent design is one of the
+            many things I appreciate doing
+        </p>
+    </div>
+    
 </div>
