Correct Agrino Intro

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -29,7 +29,7 @@
     </div>
     <h1 style="color:olivedrab">Agrino</h1>
     <p>
-        An android application to information farmers of services around there location
+        An android application to inform farmers of services around there location
     </p>
     <h2>Technologies Used</h2>
     <ul >
