Add Firebase and Spark skills

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -83,6 +83,26 @@
         </p>
     </div>
     <div class="col-sm-12 col-md-6 col-lg-4">
+        <img src="assets/spark.png" alt="Spark" class="language"> <br>
+        <h4 style="text-align:center">Spark</h4>
+        <p>
+            I build backend services based on java using the spark framework that utilizes the
+            MVC software design approach. Services include API's consumed by frontend engineers an microservices
+            that rely on a  DBMS such as Postgresql/MySQL. The realtime hotel ordering system is an Example.
+        </p>
+    </div>
+    <div class="col-sm-12 col-md-6 col-lg-4">
+        <img src="assets/firebase.png" alt="Firebase" class="language"> <br>
+        <h4 style="text-align:center">Firebase</h4>
+        <p>
+          Having applications that require a realtime source of data, scaling with user base
+          growth is not only costly but also time consuming when using private servers and
+          conventional tools. I resulted in learning Firebase, a Google Cloud tool that
+          entails services such as <b>MLKit, RealtimeDB, Cloud Functions, Hosting and Analytics</b>
+          to build efficient and cost friendly services that scale with need.
+        </p>
+    </div>
+    <div class="col-sm-12 col-md-6 col-lg-4">
         <img src="assets/html.jpg" alt="Html" class="language"> <br>
         <h4 style="text-align:center">HTML</h4>
         <p>
