Add Falcon Project

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -82,4 +82,29 @@
     <a href="https://github.com/Magz8984/Church_App">Reference To Repo</a>
     <p>Role <br> <b>Backend Developer</b> </p>
 </div>
+<div class="col-md-4 col-sm-12 projects">
+    <h1 style="color:orange">Falcon One</h1>
+    <p>
+       A self made drone controlled by an android app(transmitter), built from scratch by three of my team members and I. Was the best project I
+       have ever done. Sleepless nights but it was worth it.
+    </p>
+    <h2>Software</h2>
+    <ul >
+        <li>C to program the esp8266 Microcontroller Board</li>
+        <li>Java and Android Studio to come up with the android app</li>
+    </ul>
+    <h2>Hardware</h2>
+    <ul >
+        <li>Plastic Frame with PDB</li>
+        <li>4 EMAX Rotors 2100kv (2000Rpms)</li>
+        <li>4 BL HELI  ESCs 30A 5V Output</li>
+        <li>4 prppellers 1045 (2 CW 2 CCW)</li>
+        <li>ESP8266 Node MCU Microcontroller(Wifi Shield Installed 2.4Ghz)</li>
+        <li>MPU6050 Digital Motion Sensor with DMP (Digital Motion Processing)</li>
+        <li>Minor electronic components.. jumper wires ets</li>
+    </ul>
+    <hr>
+    <a href="https://github.com/zecollokaris/Remote-Control-Falcon-1-Quadcopter">Reference To Repo</a>
+    <p>Role <br> <b>Scrum Master, Firmware Lead, Support Android Engineer</b> </p>
+</div>
 </div>
