--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,5 +1,7 @@
 .projects{
     transition: all .3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    border: 1px groove black;
+    margin-top: 5px;
 }
 .projects:hover{
     box-shadow: 5px 5px 5px black;
