Add Falcon Project

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -83,7 +83,7 @@
     <p>Role <br> <b>Backend Developer</b> </p>
 </div>
 <div class="col-md-4 col-sm-12 projects">
-    <h1 style="color:orange">Falcon One</h1>
+    <h1 style="color:orchid">Falcon One</h1>
     <p>
        A self made drone controlled by an android app(transmitter), built from scratch by three of my team members and I. Was the best project I
        have ever done. Sleepless nights but it was worth it.
