falcon spelling corrections

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -98,13 +98,13 @@
         <li>Plastic Frame with PDB</li>
         <li>4 EMAX Rotors 2100kv (2000Rpms)</li>
         <li>4 BL HELI  ESCs 30A 5V Output</li>
-        <li>4 prppellers 1045 (2 CW 2 CCW)</li>
+        <li>4 propellers 1045 (2 CW 2 CCW)</li>
         <li>ESP8266 Node MCU Microcontroller(Wifi Shield Installed 2.4Ghz)</li>
         <li>MPU6050 Digital Motion Sensor with DMP (Digital Motion Processing)</li>
-        <li>Minor electronic components.. jumper wires ets</li>
+        <li>Minor electronic components.. jumper wires etc</li>
     </ul>
     <hr>
-    <a href="https://github.com/zecollokaris/Remote-Control-Falcon-1-Quadcopter">Reference To Repo</a>
+    <a href="https://github.com/zecollokaris/Remote-Control-Falcon-1-Quadcopter" target="_blank">Reference To Repo</a>
     <p>Role <br> <b>Scrum Master, Firmware Lead, Support Android Engineer</b> </p>
 </div>
 </div>
