--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+/* Landing Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap');
+.Rubik-Bold{
+    font-family: 'Rubik', sans-serif;
+    font-weight: 600;
+}
+
+.Rubik-Medium{
+    font-family: 'Rubik', sans-serif;
+    font-weight: 400;
+}
