--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,110 +1,21 @@
-<h1>Projects</h1>
-<p style="text-align:center" style="font-family: 'Alegreya Sans', sans-serif;font-size:20px">
-   The is a brief description of some of my 4 main projects and  how the work <br>
-   To see all my repos check this <a href="https://github.com/Magz8984">link</a>
-</p>
+<div class="container">
+    <div class="row no-gutters about-content">
+        <div class="col-lg-6">
+          <img src="assets/collins.png" class="img-fluid" alt="Me" />
+        </div>
 
-<div class="row">
- <div class="col-md-4 col-sm-12 projects">
-    <div style="width:100%;background-color:#fff">
-        <img src="assets/build.png" alt="leaf" width="50px" height="50px"style="margin:20px">
-    </div>
-    <h1 style="color:skyblue">Build</h1>
-    <p>
-        A Linux and Windows C program dedicated to helping develop <br> the basic program structure of gradle managed java apps.
-    </p>
-    <h2>Technologies Used</h2>
-    <ul >
-       <li>C Programmming Language</li>
-       <li>Gradle</li>
-    </ul>
-    
-    <a href="https://magz8984.github.io/Build/">Reference To Docs</a> <hr>
-    <a href="https://github.com/Magz8984/Build">Reference To Repo</a>
-    <p>Role <br> <b>Full Time Developer</b> </p>
- </div>
- <div class="col-md-4 col-sm-12 projects ">
-    <div style="width:100%;background-color:#262626">
-        <img src="assets/leaf.png" alt="leaf" width="50px" height="50px"style="margin:20px">
-    </div>
-    <h1 style="color:olivedrab">Agrino</h1>
-    <p>
-        An android application to inform farmers of services around there location
-    </p>
-    <h2>Technologies Used</h2>
-    <ul >
-        <li> XML Defining Layouts and Resources used in my app not forgetting the manifest</li>
-        <li>Java The engineering language behind the apps functionality</li>
-        <li>Google Fonts Narmit Bold and Normal for the app fonts</li>
-        <li>Circular Image View Dependency To create my Recycler View Item Circular Image</li>
-        <li>Glide To ensure smooth image loading since images are retrieved from the Internet</li>
-    </ul>
-    <hr>
-    <a href="https://github.com/Magz8984/Agrino">Reference To Repo</a>
-    <p>Role <br> <b>Android Developer</b> </p>
-</div>
-<div class="col-md-4 col-sm-12 projects">
-    <div style="width:100%;background-color:#fff">
-        <img src="assets/oct.png" alt="leaf" width="50px" height="50px"style="margin:20px">
-    </div>
-    <h1 style="color:slategray">Github Search</h1>
-    <p>
-        Github search  using the github api and angular frontend  framework
-    </p>
-    <h2>Technologies Used</h2>
-    <ul >
-       
-   <li>Angular Frontend Framework</li> 
-    <li>Typescript</li>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>Github Application Programming Interface</li>
-    </ul>
-    <a href="https://magz8984.github.io/GithubSearch">Link to App</a>
-    <p>Role <br> <b>Full stack Developer</b> </p>
-</div>
-<div class="col-md-4 col-sm-12 projects">
-    <h1 style="color:slategray">Church App</h1>
-    <p>
-       An app that will enable my church to store data of all its members . Build data on its 
-       database and easily find people data
-    </p>
-    <h2>Technologies Used</h2>
-    <ul >
-   <li>Swing</li> 
-    <li>Sql(Structued Query Language)</li>
-    <li>DDL script written in SQL to define the database structure</li>
-    <li>Java</li>
-    <li>MySql</li>
-    <li>Mysql connector jar file to serve as the driver to connect to your mysql server</li>
-    </ul>
-    <hr>
-    <a href="https://github.com/Magz8984/Church_App">Reference To Repo</a>
-    <p>Role <br> <b>Backend Developer</b> </p>
-</div>
-<div class="col-md-4 col-sm-12 projects">
-    <h1 style="color:orchid">Falcon One</h1>
-    <p>
-       A self made drone controlled by an android app(transmitter), built from scratch by three of my team members and I. Was the best project I
-       have ever done. Sleepless nights but it was worth it.
-    </p>
-    <h2>Software</h2>
-    <ul >
-        <li>C to program the esp8266 Microcontroller Board</li>
-        <li>Java and Android Studio to come up with the android app</li>
-    </ul>
-    <h2>Hardware</h2>
-    <ul >
-        <li>Plastic Frame with PDB</li>
-        <li>4 EMAX Rotors 2100kv (2000Rpms)</li>
-        <li>4 BL HELI  ESCs 30A 5V Output</li>
-        <li>4 propellers 1045 (2 CW 2 CCW)</li>
-        <li>ESP8266 Node MCU Microcontroller(Wifi Shield Installed 2.4Ghz)</li>
-        <li>MPU6050 Digital Motion Sensor with DMP (Digital Motion Processing)</li>
-        <li>Minor electronic components.. jumper wires etc</li>
-    </ul>
-    <hr>
-    <a href="https://github.com/zecollokaris/Remote-Control-Falcon-1-Quadcopter" target="_blank">Reference To Repo</a>
-    <p>Role <br> <b>Scrum Master, Firmware Lead, Support Android Engineer</b> </p>
-</div>
+        <div
+          class="col-lg-6 d-flex flex-column justify-content-center">
+          <div class="section-title Rubik-Medium">
+            <h3>About Me.</h3>
+            <h5>Software Developer / Tech Entrepreneur / Writer</h5>
+            <p>
+             I am Collins Muthinja a tech enthusiast, entrepreneur and software developer interested in
+             design and development of products that help improve lives. I have built products from web applications,
+             mobile applications, embedded systems, and USSD applications in various industries. As part of my achivements, 
+             I have taken a technical co-founder position in various startups. More on this on <a href="http://muthinja.medium.com">my blog</a>.
+            </p>
+          </div>
+        </div>
+      </div>
 </div>
