--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -20,7 +20,7 @@
           <a class="nav-link" href="#">Works</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" href="https://muthinja.medium.com">Blog</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contacts</a>
