--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row no-gutters about-content">
-        <div class="col-lg-6">
+        <div class="col-lg-6 d-flex flex-column justify-content-center">
           <img src="assets/collins.png" class="img-fluid" alt="Me" />
         </div>
 
@@ -10,11 +10,48 @@
             <h3>About Me.</h3>
             <h5>Software Developer / Tech Entrepreneur / Writer</h5>
             <p>
-             I am Collins Muthinja a tech enthusiast, entrepreneur and software developer interested in
-             design and development of products that help improve lives. I have built products from web applications,
-             mobile applications, embedded systems, and USSD applications in various industries. As part of my achivements, 
-             I have taken a technical co-founder position in various startups. More on this on <a href="http://muthinja.medium.com">my blog</a>.
+             I am Collins Muthinja. I'm a software developer, entrepreneur and writer interested in
+             design and development of products that help improve lives.
             </p>
+
+            <div class="progress" style="height: 25px; margin-top: 20px">
+                <div class="progress-bar progress-wrapper" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-text">
+                        Mobile App Development
+                    </div>
+                    <div class="progress-percentage">
+                        85%
+                    </div>
+                </div>
+            </div>
+            <div class="progress" style="height: 25px; margin-top: 20px">
+                <div class="progress-bar progress-wrapper" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-text">
+                        Website Design
+                    </div>
+                    <div class="progress-percentage">
+                        75%
+                    </div>
+                </div>
+            </div>
+            <div class="progress" style="height: 25px; margin-top: 20px">
+                <div class="progress-bar progress-wrapper" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-text">
+                        Backend And Database Architecture
+                    </div>
+                    <div class="progress-percentage">
+                     90%
+                    </div>
+                </div>
+            </div>
+            <div class="buttons">
+                <button class="btn cta-button">
+                    Download CV
+                </button>
+                <button class="btn contact-me-button">
+                    Contact Me
+                </button>
+            </div>
           </div>
         </div>
       </div>
