--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -10,7 +10,7 @@
             <h3>About Me.</h3>
             <h5>Software Developer / Tech Entrepreneur / Writer</h5>
             <p>
-             I am Collins Muthinja. I'm a software developer, entrepreneur and writer interested in
+             I am Collins Muthinja. A software developer, entrepreneur and writer interested in
              design and development of products that help improve lives.
             </p>
 
