--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,5 +1,86 @@
 <div class="content-wrapper">
   <div class="container content">
     <h3 class="services-header">Services.</h3>
+
+    <div class="row">
+      <div class="col-lg-4 d-flex flex-column justify-content-center">
+          <div class="light-gray">
+            <div  class="image-flex">
+              <img src="assets/coding.png" alt="coding">
+            </div>
+            <h5 class="image-title">Fullstack Development</h5>
+            <p class="image-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+              molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+              numquam blanditiis harum quisquam eius
+            </p>
+          </div>
+      </div>
+      <div class="col-lg-4 d-flex flex-column justify-content-center">
+        <div class="light-gray">
+          <div  class="image-flex">
+            <img src="assets/mobile.png" alt="mobile app developemnt">
+          </div>
+          <h5 class="image-title">Mobile App Development</h5>
+          <p class="image-description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+            molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+            numquam blanditiis harum quisquam eius
+          </p>
+        </div>
+      </div>
+      <div class="col-lg-4 d-flex flex-column justify-content-center">
+          <div class="light-gray">
+            <div  class="image-flex">
+              <img src="assets/web-design.png" alt="Wed Design">
+            </div>
+            <h5 class="image-title">Web Design</h5>
+            <p class="image-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+              molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+              numquam blanditiis harum quisquam eius
+            </p>
+          </div>
+      </div>
+      <div class="col-lg-4 d-flex flex-column justify-content-center">
+        <div class="light-gray">
+          <div  class="image-flex">
+            <img src="assets/cloud-data.png" alt="Cloud Infrastructure">
+          </div>
+          <h5 class="image-title">Cloud Infrastructure</h5>
+          <p class="image-description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+            molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+            numquam blanditiis harum quisquam eius
+          </p>
+        </div>
+    </div>
+    <div class="col-lg-4 d-flex flex-column justify-content-center">
+      <div class="light-gray">
+        <div  class="image-flex">
+          <img src="assets/digital-marketing.png" alt="Digital Marketing">
+        </div>
+        <h5 class="image-title">Digital Marketing</h5>
+        <p class="image-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+          molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+          numquam blanditiis harum quisquam eius
+        </p>
+      </div>
+  </div>
+  <div class="col-lg-4 d-flex flex-column justify-content-center">
+    <div class="light-gray">
+      <div  class="image-flex">
+        <img src="assets/writing.png" alt="Writing">
+      </div>
+      <h5 class="image-title">Content Writing</h5>
+      <p class="image-description">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+        numquam blanditiis harum quisquam eius
+      </p>
+    </div>
+  </div>
+  </div>
   </div>  
 </div>
