--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -42,6 +42,7 @@
           <a href="https://www.instagram.com/_muthinja" target="_blank"><i class="fa-brands fa-instagram"></i></a>  
           <a href="https://www.linkedin.com/in/collins-muthinja-trippi" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
           <a href="https://muthinja.medium.com" target="_blank"><i class="fa-brands fa-medium"></i></a>
+          <a href=""><i class="fa-solid fa-envelope"></i></a>
         </span>
       </div>
   </div>
