--- a/src/app/services/services.component.css
+++ b/src/app/services/services.component.css
@@ -11,5 +11,41 @@
 .content-wrapper{
     background-color: #F3F2EF;
     margin: 30px 0px 0px;
-    padding: 30px 0px 0px;
+    padding: 30px 0px 30px;
+}
+
+
+.light-gray {
+    background-color: #FBFBFA;
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    box-shadow: 0px 0px 1px 0px #9b9b9b,
+    0 1px 1px 0 #9b9b9b,
+    0 1px 1px 0 #9b9b9b;
+}
+
+.image-flex {
+    display: flex;
+    justify-content: center;
+}
+
+.image-flex img {
+    width: 68px;
+    height:auto;
+    padding: 15px;
+    background-color: #F3F2EF;
+    border-radius: 29px;
+}
+
+.image-description {
+    font-family: 'Rubik', sans-serif;
+    margin-top: 15px;
+}
+
+.image-title {
+    font-family: 'Rubik', sans-serif;
+    font-weight: 450;
+    text-align: center;
+    margin-top: 15px;
 }
