--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,6 +11,7 @@
             <a href=""><i class="fa-solid fa-envelope"></i></a>
           </div>
           <p class="email">collinsmuthinja@gmail.com</p>
+          <p class="phone-number">+254753924273</p>
         </div>
     </div>
     <div class="col-lg-6">
