--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -10,9 +10,8 @@
             </div>
             <h5 class="image-title">Fullstack Development</h5>
             <p class="image-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-              molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-              numquam blanditiis harum quisquam eius
+              Most apps are divided into two sections, backend, and frontend. Developers who handle both facets are Fullstack Developers. Having acquired both skills and experience in frameworks such as React, Vue, Node JS, 
+              and Spring Boot, I design both with minimal effort.
             </p>
           </div>
       </div>
@@ -23,9 +22,8 @@
           </div>
           <h5 class="image-title">Mobile App Development</h5>
           <p class="image-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-            molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-            numquam blanditiis harum quisquam eius
+            Established and startup organizations use mobile apps to increase customer engagement. Having designed and developed android apps from games, social networks, and e-health platforms, I have acquired experience
+            that allows me to create mobile apps effortlessly
           </p>
         </div>
       </div>
@@ -36,9 +34,8 @@
             </div>
             <h5 class="image-title">Web Design</h5>
             <p class="image-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-              molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-              numquam blanditiis harum quisquam eius
+              Web design is monumental to the online success of an organization. Designing user journeys through wireframes and user experience has always
+              been one of my passions. Through prototyping, I design user journeys making them iteratively pleasing to my clients.
             </p>
           </div>
       </div>
@@ -49,9 +46,8 @@
           </div>
           <h5 class="image-title">Cloud Infrastructure</h5>
           <p class="image-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-            molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-            numquam blanditiis harum quisquam eius
+            Cloud computing is now a must-have for all scalable businesses, it's not only cost-effective but also convenient. Having worked with popular
+            cloud platforms such as AWS and GCP in both corporate and personal projects, I design secure and robust architectures on the cloud.
           </p>
         </div>
     </div>
@@ -62,9 +58,8 @@
         </div>
         <h5 class="image-title">Digital Marketing</h5>
         <p class="image-description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-          molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-          numquam blanditiis harum quisquam eius
+          In order to acquire and satisfy customers, you need an online presence. SEO, SEM, and social media management, being consumer-facing,
+          are one of my heartfelt passions. I design digital marketing plans by establishing clear and achievable KPIs for both my client and me.
         </p>
       </div>
   </div>
@@ -75,9 +70,8 @@
       </div>
       <h5 class="image-title">Content Writing</h5>
       <p class="image-description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-        numquam blanditiis harum quisquam eius
+        Blogging has long been just about content. It can be a handy tool to increase customer engagement and or acquisition. 
+        I write blogs on startup issues, product reviews, and personal experiences. I believe it's an integral part of any brand's online presence.
       </p>
     </div>
   </div>
