Add download cv functionality

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -45,9 +45,9 @@
                 </div>
             </div>
             <div class="buttons">
-                <button class="btn cta-button">
+                <a href="assets/resume/Resume.pdf" class="btn cta-button" id="download" download>
                     Download CV
-                </button>
+                </a>
                 <button class="btn contact-me-button">
                     Contact Me
                 </button>
