Change Download Resume

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -45,8 +45,8 @@
                 </div>
             </div>
             <div class="buttons">
-                <a href="assets/resume/Resume.pdf" class="btn cta-button" id="download" download>
-                    Download CV
+                <a href="assets/resume/CollinsMuthinjaResume.pdf" class="btn cta-button" id="download" download>
+                    Download Resume
                 </a>
                 <button class="btn contact-me-button">
                     Contact Me
